--- a/_posts/2015-04-25-sass-conf.md
+++ b/_posts/2015-04-25-sass-conf.md
@@ -1,17 +1,16 @@
 ---
 <!-- layout: post -->
-title: "SassConf"
+title: "Sponsor: Pac Pie"
 <!-- categories: coders -->
 <!-- author: Allen Liff -->
 <!-- permalink: venetian-users -->
 <!-- image: sass-conf -->
 
 ---
-<img src="img/sass-conf.jpg" alt="sass folks">
+<img src="http://www.createplenty.org/wp-content/uploads/2015/02/pie-banner-300x97.png" alt="cafe"><br>
 
-Who cares about the Sass Conference? Certainly not the misanthropes I met!
+HOORAY FOR PACIFIC PIE!
 
-<img src="img/changes.jpg" alt="changes">
 <br>
-<img src="img/cafe.png" alt="cafe">
-<img src="img/zerocat.png" alt="cat" style="float:left; padding: 16px;"> Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat! Hooray for the Zero Cat! We love the Zero Cat!
+
+<img src="http://www.createplenty.org/wp-content/uploads/2015/02/SARAH-AND-CHRIS-219x300.jpg" alt="cat" style="float:left; padding: 16px;"> Hooray for the Zero Cat! This month we shine the spotlight on the Pacific Pie Company, launched in 2009 by Sarah and Chris, a wife and husband team. Their journey to sustainable scrumptiousness began in Chris’ native Australia where they lived in an Eco-village in the mountains of Queensland. There, they became familiar with the principles of Permaculture – a creative design process that guides us to mimic the patterns and relationships we find in nature. When they moved to Portland, Chris’s homesickness for all things Aussie, including meat pies, was the launching points for Pacific Pie Company! From the start, they were determined to apply principles of Permaculture design and make sustainability an integral part of their business.
